# DesignPatterns

./: README.md
BehavioralPatterns/TemplateMethod/: CMakeLists.txt  client.cpp  client.h  client_main.cpp  server.cpp  server.h  server_main.cpp  tcp_comunication.cpp  tcp_comunication.h
